--- a/producer_styles.css
+++ b/producer_styles.css
@@ -139,7 +139,7 @@ button:hover {
 #mapContainer {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: visible;
     /* border-radius: 50%; */
     position: relative;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
